Adds update feature for a client and for a server, Adds verify user functionality, Adds editable components

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -6,6 +6,7 @@
 @import 'rental/rental-listing.scss';
 @import 'rental/rental-detail.scss';
 @import 'rental/rental-manage.scss';
+@import 'editable/editable-component.scss';
 
 .clickable {
   &:hover {
