--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -7,6 +7,7 @@
 @import 'rental/rental-detail.scss';
 @import 'rental/rental-manage.scss';
 @import 'editable/editable-component.scss';
+@import 'payment/payment';
 
 .clickable {
   &:hover {
